264. Model 2: Building, fitting and evaluating a Conv1D model with token embeddings

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -1734,7 +1734,7 @@
         "id": "GDDGepFwtDYB"
       },
       "source": [
-        "# Model 1 : Conv1D with token embeddings"
+        "## Model 1 : Conv1D with token embeddings"
       ]
     },
     {
@@ -2152,17 +2152,17 @@
         "                                        trainable=False,\n",
         "                                        name=\"universal_sentence_encoder\")"
       ],
-      "execution_count": 60,
+      "execution_count": 66,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hD2elk77_-R-",
-        "outputId": "675f16a8-e88d-4976-c66b-70dae65f0a3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hD2elk77_-R-",
+        "outputId": "675f16a8-e88d-4976-c66b-70dae65f0a3d"
       },
       "source": [
         "# Test out the pretrained embedding on a random sentence\n",
@@ -2195,11 +2195,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qJO4wzJ-EDe_",
-        "outputId": "4ba94c21-5d0e-49d3-d290-cb83be5f373f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qJO4wzJ-EDe_",
+        "outputId": "4ba94c21-5d0e-49d3-d290-cb83be5f373f"
       },
       "source": [
         "use_embedded_sentence.shape"
@@ -2221,15 +2221,301 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w2bgCtQaInN3"
+      },
+      "source": [
+        "### Building and fitting an NLP extraction mdoel using pretrained embeddings from Tensorflow Hub"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "WpOQKeoGEeUO"
       },
       "source": [
-        ""
+        "# Define feature extraction model using TF Hub layer\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "inputs = layers.Input(shape=[], dtype=\"string\") # required empty list for pretrained layer\n",
+        "pretrained_embedding  = tf_hub_embedding_layer(inputs) # tokenize and embeddings of each sequence(512 long vectors)\n",
+        "x = layers.Dense(128, activation=\"relu\")(pretrained_embedding)\n",
+        "# Note : you could add more layes here if you wanted to \n",
+        "outputs = layers.Dense(num_classes, activation=\"softmax\")(x) # create the output layer\n",
+        "model_2 = tf.keras.Model(inputs = inputs,\n",
+        "                         outputs = outputs,\n",
+        "                         name=\"model_2_USE_feature_extractor\")\n",
+        "\n",
+        "model_2.compile(loss=\"categorical_crossentropy\",\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])\n"
       ],
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6t2cqGHlK8WR",
+        "outputId": "53d90fb1-162e-46ec-ff17-09670a33b095",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Model summary\n",
+        "model_2.summary()"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_2_USE_feature_extractor\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_3 (InputLayer)         [(None,)]                 0         \n",
+            "_________________________________________________________________\n",
+            "universal_sentence_encoder ( (None, 512)               256797824 \n",
+            "_________________________________________________________________\n",
+            "dense_3 (Dense)              (None, 128)               65664     \n",
+            "_________________________________________________________________\n",
+            "dense_4 (Dense)              (None, 5)                 645       \n",
+            "=================================================================\n",
+            "Total params: 256,864,133\n",
+            "Trainable params: 66,309\n",
+            "Non-trainable params: 256,797,824\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x9QV1xzKH8cO",
+        "outputId": "b708212c-8fec-4e1b-db48-cd1d90ee710f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "history_model_2 = model_2.fit(train_dataset,\n",
+        "                              epochs=3,\n",
+        "                              steps_per_epoch=int(0.1 * len(train_dataset)),\n",
+        "                              validation_data = valid_dataset,\n",
+        "                              validation_steps = int(0.1 * len(valid_dataset))\n",
+        "                              )"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/3\n",
+            "562/562 [==============================] - 9s 13ms/step - loss: 0.9119 - accuracy: 0.6491 - val_loss: 0.7964 - val_accuracy: 0.6895\n",
+            "Epoch 2/3\n",
+            "562/562 [==============================] - 7s 13ms/step - loss: 0.7689 - accuracy: 0.7002 - val_loss: 0.7550 - val_accuracy: 0.7045\n",
+            "Epoch 3/3\n",
+            "562/562 [==============================] - 7s 13ms/step - loss: 0.7524 - accuracy: 0.7113 - val_loss: 0.7401 - val_accuracy: 0.7128\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CP21HofiM88O",
+        "outputId": "fd941373-f135-4b78-ccdf-529489bd96da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Evaluate the model\n",
+        "results_model_2 = model_2.evaluate(valid_dataset)\n",
+        "results_model_2"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "945/945 [==============================] - 10s 11ms/step - loss: 0.7420 - accuracy: 0.7125\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.7420307993888855, 0.7125314474105835]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PTVUxRFlOJSq",
+        "outputId": "278f51cf-5c50-409f-9ba8-37c3cbd3e7fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make predictions with feature extraction mdoel\n",
+        "model_2_pred_probs = model_2.predict(valid_dataset)\n",
+        "model_2_pred_probs[:10]"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[4.26140666e-01, 3.69082987e-01, 2.40834453e-03, 1.95462123e-01,\n",
+              "        6.90584537e-03],\n",
+              "       [2.99811661e-01, 5.31646848e-01, 4.04548505e-03, 1.61941826e-01,\n",
+              "        2.55415309e-03],\n",
+              "       [2.22661972e-01, 1.62379056e-01, 1.99275743e-02, 5.59218824e-01,\n",
+              "        3.58126387e-02],\n",
+              "       [1.32023310e-02, 4.49675098e-02, 8.27391088e-01, 7.02954829e-03,\n",
+              "        1.07409522e-01],\n",
+              "       [3.66061591e-02, 2.25065023e-01, 2.17195749e-01, 1.60727482e-02,\n",
+              "        5.05060375e-01],\n",
+              "       [9.61861107e-04, 2.39150925e-03, 6.85543358e-01, 1.08686305e-04,\n",
+              "        3.10994595e-01],\n",
+              "       [2.02924083e-03, 3.19104991e-03, 6.36198819e-01, 1.05900539e-03,\n",
+              "        3.57521862e-01],\n",
+              "       [3.69989732e-03, 2.03090198e-02, 4.76695597e-01, 8.64736328e-04,\n",
+              "        4.98430789e-01],\n",
+              "       [6.55959419e-04, 7.28587713e-03, 1.83167346e-02, 1.12452835e-03,\n",
+              "        9.72616911e-01],\n",
+              "       [1.40896797e-01, 6.86809897e-01, 2.82252356e-02, 8.05342570e-02,\n",
+              "        6.35337904e-02]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_0S9jKuFP-9N",
+        "outputId": "5213afc9-beb9-4e76-e6ff-98ee43a168f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Convert the predictions probabilities found with feature extraction model to labels\n",
+        "model_2_preds = tf.argmax(model_2_pred_probs, axis=1)\n",
+        "model_2_preds"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(30212,), dtype=int64, numpy=array([0, 1, 3, ..., 4, 4, 2])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0oUyWhhGPsEX"
+      },
+      "source": [
+        "# Calculate results from TF Hub pretrained embeddings results on val set\n",
+        "model_2_results = calculate_results(y_true = val_labels_encoded,\n",
+        "                                    y_pred = model_2_preds)\n"
+      ],
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "musM_yfgQ0r1",
+        "outputId": "63835bf3-852e-4c28-e5d1-b47f4023edc5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model_2_results"
+      ],
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 71.25314444591552,\n",
+              " 'f1': 0.7095639099839991,\n",
+              " 'precision': 0.7122964073845975,\n",
+              " 'recall': 0.7125314444591553}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 79
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_zRXM0stQ2Il",
+        "outputId": "6eaeb585-453a-467b-df43-97e111a7bf63",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "baseline_results"
+      ],
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 72.1832384482987,\n",
+              " 'f1': 0.6989250353450294,\n",
+              " 'precision': 0.7186466952323352,\n",
+              " 'recall': 0.7218323844829869}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 80
+        }
+      ]
     }
   ]
 }
