266. Creating a character-level embedding layer with tf.keras.layers.Embedding

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -2761,11 +2761,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "OSZJ5ppTwlI6",
-        "outputId": "d2b320fe-7f14-40ab-d942-5f92546f5a0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "d2b320fe-7f14-40ab-d942-5f92546f5a0f"
       },
       "source": [
         "# Get all keyboard character\n",
@@ -2825,11 +2825,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "55fagHz6zggF",
-        "outputId": "40c20ab9-adc6-409a-d3dc-6e6c325aa6b6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "55fagHz6zggF",
+        "outputId": "40c20ab9-adc6-409a-d3dc-6e6c325aa6b6"
       },
       "source": [
         "# Check character vocab stats\n",
@@ -2854,11 +2854,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "i4VU2F51008_",
-        "outputId": "18997b36-5b66-42eb-bc16-2f337d1f4f64",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "i4VU2F51008_",
+        "outputId": "ba7203b4-325a-41fd-9a10-c0308b69c852"
       },
       "source": [
         "# Test our character vectorizer\n",
@@ -2869,23 +2869,23 @@
         "print(f\"\\nVectorized chars :\\n {vectorized_chars}\")\n",
         "print(f\"\\nLength of vectorized chars : {len(vectorized_chars[0])}\")"
       ],
-      "execution_count": 107,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Charified text : \n",
-            " t o n s i l l e c t o m y   w a s   p e r f o r m e d   b y   o n e   o f   t w o   s u r g e o n s   u s i n g   a   s t a n d a r d   t e c h n i q u e   (   m o n o p o l a r   c a u t e r y   )   ,   a n d   a   s i n g l e   a n e s t h e t i c   p r o t o c o l   w a s   f o l l o w e d   .\n",
+            " i n j e c t i n g   t h e   l o c a l   a n e s t h e t i c   t h r o u g h   a l l   p r e p e r i t o n e a l   l a y e r s   p r o v i d e d   a   f u l l - t h i c k n e s s   l o c a l   i n j e c t i o n   .\n",
             "\n",
-            "Length of random_train chars: 125\n",
+            "Length of random_train chars: 94\n",
             "\n",
             "Vectorized chars :\n",
-            " [[ 3  7  6  9  4 12 12  2 11  3  7 15 19 20  5  9 14  2  8 17  7  8 15  2\n",
-            "  10 22 19  7  6  2  7 17  3 20  7  9 16  8 18  2  7  6  9 16  9  4  6 18\n",
-            "   5  9  3  5  6 10  5  8 10  3  2 11 13  6  4 26 16  2 15  7  6  7 14  7\n",
-            "  12  5  8 11  5 16  3  2  8 19  5  6 10  5  9  4  6 18 12  2  5  6  2  9\n",
-            "   3 13  2  3  4 11 14  8  7  3  7 11  7 12 20  5  9 17  7 12 12  7 20  2\n",
-            "  10  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+            " [[ 4  6 27  2 11  3  4  6 18  3 13  2 12  7 11  5 12  5  6  2  9  3 13  2\n",
+            "   3  4 11  3 13  8  7 16 18 13  5 12 12 14  8  2 14  2  8  4  3  7  6  2\n",
+            "   5 12 12  5 19  2  8  9 14  8  7 21  4 10  2 10  5 17 16 12 12  3 13  4\n",
+            "  11 23  6  2  9  9 12  7 11  5 12  4  6 27  2 11  3  4  7  6  0  0  0  0\n",
+            "   0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+            "   0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
             "   0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
             "   0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
             "   0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
@@ -2901,12 +2901,83 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "TB3QhXvZ1S72"
       },
       "source": [
-        "}"
+        "## Creating a character-level embedding"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y9_xIGl02Yp5"
+      },
+      "source": [
+        "# Create char embedding layer\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "char_embed = layers.Embedding(input_dim = len(char_vocab), #number of different characters\n",
+        "                                  output_dim = 25, # this is the size of the char embedding in the paper.  https://arxiv.org/pdf/1612.05251.pdf\n",
+        "                                  mask_zero=True,\n",
+        "                                  name = \"char_embed\")"
+      ],
+      "execution_count": 110,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nHby8ehi7o8Z",
+        "outputId": "1b964b12-d24e-4843-8b03-0ce9df8cb5db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Test our character embedding layer\n",
+        "print(f\"Charified text:\\n {random_train_chars}\\n\")\n",
+        "char_embed_example = char_embed(char_vectorizer([random_train_chars]))\n",
+        "print(f\"Embedded chars. (after vectorization and embedding):\\n{char_embed_example}\\n\")\n",
+        "print(f\"Character embedding shape:{char_embed_example.shape}\")"
+      ],
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Charified text:\n",
+            " i n j e c t i n g   t h e   l o c a l   a n e s t h e t i c   t h r o u g h   a l l   p r e p e r i t o n e a l   l a y e r s   p r o v i d e d   a   f u l l - t h i c k n e s s   l o c a l   i n j e c t i o n   .\n",
+            "\n",
+            "Embedded chars. (after vectorization and embedding):\n",
+            "[[[-0.04047535 -0.02311223 -0.03224038 ...  0.02648805  0.03961239\n",
+            "   -0.0031312 ]\n",
+            "  [-0.03734992  0.0059276  -0.03862431 ... -0.00245922  0.03705439\n",
+            "    0.01270759]\n",
+            "  [ 0.04211285  0.0486169  -0.00238479 ...  0.0184513  -0.03107752\n",
+            "    0.0139741 ]\n",
+            "  ...\n",
+            "  [ 0.04615341 -0.01822251  0.01588229 ... -0.00182333  0.04011986\n",
+            "    0.02437471]\n",
+            "  [ 0.04615341 -0.01822251  0.01588229 ... -0.00182333  0.04011986\n",
+            "    0.02437471]\n",
+            "  [ 0.04615341 -0.01822251  0.01588229 ... -0.00182333  0.04011986\n",
+            "    0.02437471]]]\n",
+            "\n",
+            "Character embedding shape:(1, 290, 25)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nsSZSQJN8bo5"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
