267. Model 3: Building, fitting and evaluating a Conv1D model on character embeddings

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -2585,7 +2585,7 @@
         "id": "6D10HNVluCc-",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 86
         },
         "outputId": "bcebc169-e514-4d16-89f7-be06796fbf13"
       },
@@ -2929,11 +2929,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nHby8ehi7o8Z",
-        "outputId": "1b964b12-d24e-4843-8b03-0ce9df8cb5db",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nHby8ehi7o8Z",
+        "outputId": "1b964b12-d24e-4843-8b03-0ce9df8cb5db"
       },
       "source": [
         "# Test our character embedding layer\n",
@@ -2972,9 +2972,314 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "nsSZSQJN8bo5"
+      },
+      "source": [
+        "### Building a Conv1D model to fit on the character embeddings\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yZpBklxk_K2D"
+      },
+      "source": [
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "# Make Conv1D on chars only\n",
+        "inputs = layers.Input(shape=(1, ), dtype=\"string\")\n",
+        "char_vectors = char_vectorizer(inputs)\n",
+        "char_embeddings = char_embed(char_vectors)\n",
+        "x = layers.Conv1D(filters = 64,                  \n",
+        "                  kernel_size=5,\n",
+        "                  padding=\"same\",\n",
+        "                  activation=\"relu\")(char_embeddings)\n",
+        "x = layers.GlobalMaxPool1D()(x)\n",
+        "outputs = layers.Dense(num_classes, activation=\"softmax\")(x)\n",
+        "model_3 = tf.keras.Model(inputs= inputs, \n",
+        "                         outputs=outputs,\n",
+        "                         name=\"model_3_conv1d_char_embeddings\")\n",
+        "\n",
+        "# Compile the model\n",
+        "model_3.compile(loss=\"categorical_crossentropy\",\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])\n",
+        "\n"
+      ],
+      "execution_count": 129,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G5wxDUpdAqYb",
+        "outputId": "2ecc9c8c-a1ee-47df-e5ce-49353f6ad018",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get model 3 summary\n",
+        "model_3.summary()"
+      ],
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_3_conv1d_char_embeddings\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_5 (InputLayer)         [(None, 1)]               0         \n",
+            "_________________________________________________________________\n",
+            "char_vectorizer (TextVectori (None, 290)               0         \n",
+            "_________________________________________________________________\n",
+            "char_embed (Embedding)       (None, 290, 25)           700       \n",
+            "_________________________________________________________________\n",
+            "conv1d_3 (Conv1D)            (None, 290, 64)           8064      \n",
+            "_________________________________________________________________\n",
+            "global_max_pooling1d (Global (None, 64)                0         \n",
+            "_________________________________________________________________\n",
+            "dense_5 (Dense)              (None, 5)                 325       \n",
+            "=================================================================\n",
+            "Total params: 9,089\n",
+            "Trainable params: 9,089\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "99o4lPv0COwt",
+        "outputId": "3884bd8d-576e-44be-87b8-c964bb0b38aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Create char level datasets\n",
+        "train_char_dataset = tf.data.Dataset.from_tensor_slices((train_chars, train_labels_one_hot)).batch(32).prefetch(tf.data.AUTOTUNE)\n",
+        "val_char_dataset =   tf.data.Dataset.from_tensor_slices((val_chars, val_labels_one_hot)).batch(32).prefetch(tf.data.AUTOTUNE)\n",
+        "test_char_dataset =  tf.data.Dataset.from_tensor_slices((test_chars, test_labels_one_hot)).batch(32).prefetch(tf.data.AUTOTUNE)\n",
+        "\n",
+        "train_char_dataset"
+      ],
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<PrefetchDataset shapes: ((None,), (None, 5)), types: (tf.string, tf.float64)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r6iLx111Aubg",
+        "outputId": "0521420d-6ffc-4776-e5c6-9711b783c120",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Fit the model on chars only\n",
+        "history_model_3 = model_3.fit(train_char_dataset,\n",
+        "                              epochs=3, \n",
+        "                              steps_per_epoch=int(0.1 * len(train_char_dataset)),\n",
+        "                              validation_data = val_char_dataset,\n",
+        "                              validation_steps = int(0.1 * len(val_char_dataset)))\n"
+      ],
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/3\n",
+            "562/562 [==============================] - 4s 7ms/step - loss: 1.2600 - accuracy: 0.4780 - val_loss: 1.1338 - val_accuracy: 0.5366\n",
+            "Epoch 2/3\n",
+            "562/562 [==============================] - 3s 6ms/step - loss: 1.1005 - accuracy: 0.5467 - val_loss: 1.0310 - val_accuracy: 0.5831\n",
+            "Epoch 3/3\n",
+            "562/562 [==============================] - 4s 6ms/step - loss: 1.0075 - accuracy: 0.5994 - val_loss: 0.9558 - val_accuracy: 0.6260\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yTjPVUtNGGfz",
+        "outputId": "92f4c14c-5474-4241-870a-6a24ef11e9c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Evaluate the model 3\n",
+        "model_3_results = model_3.evaluate(val_char_dataset)"
+      ],
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "945/945 [==============================] - 4s 4ms/step - loss: 0.9761 - accuracy: 0.6171\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3-BN0uV2Ghbh",
+        "outputId": "efa5dc97-ddd1-4b41-b9be-48dbbd6cdfb4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check model 3 prediction probabilities\n",
+        "model_3_pred_probs = model_3.predict(val_char_dataset)\n",
+        "model_3_pred_probs"
+      ],
+      "execution_count": 133,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.15827444, 0.4372962 , 0.06068485, 0.30246735, 0.04127719],\n",
+              "       [0.11852206, 0.40466225, 0.02277997, 0.42003652, 0.0339993 ],\n",
+              "       [0.09177125, 0.24484657, 0.15866707, 0.46179634, 0.04291885],\n",
+              "       ...,\n",
+              "       [0.02258549, 0.06795017, 0.09765926, 0.02235954, 0.7894455 ],\n",
+              "       [0.07690951, 0.15098993, 0.36441687, 0.04593172, 0.36175194],\n",
+              "       [0.35069978, 0.46120197, 0.09137087, 0.07874059, 0.01798678]],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 133
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FBGoV3U8GpI9",
+        "outputId": "88b52fe4-2aac-4432-fe06-c25e26dc85ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Turn prediction probabilites to class labels\n",
+        "model_3_preds = tf.argmax(model_3_pred_probs, axis=1)\n",
+        "model_3_preds"
+      ],
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(30212,), dtype=int64, numpy=array([1, 3, 3, ..., 4, 2, 1])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 134
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9P_G8TdlGxlq",
+        "outputId": "78304a6c-e1ce-475e-83a1-925c9b124a99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calculate results for Conv1D model chars only\n",
+        "model_3_results = calculate_results(y_true = val_labels_encoded,\n",
+        "                                    y_pred = model_3_preds)\n",
+        "model_3_results"
+      ],
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 61.710578578048455,\n",
+              " 'f1': 0.6073840902045187,\n",
+              " 'precision': 0.6276652210801094,\n",
+              " 'recall': 0.6171057857804846}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 135
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tlLeERKRG-wG",
+        "outputId": "d3509f3d-5803-4d55-e85f-e626744a5df7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "baseline_results"
+      ],
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 72.1832384482987,\n",
+              " 'f1': 0.6989250353450294,\n",
+              " 'precision': 0.7186466952323352,\n",
+              " 'recall': 0.7218323844829869}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 136
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zzvWCnc1HIJk"
       },
       "source": [
         ""
