268. Discussing how we're going to build Model 4 (character + token embeddings)

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -2523,6 +2523,7 @@
         "id": "ZVR0pVk6RGtC"
       },
       "source": [
+        "\n",
         "## Model 3 : Conv1D with character embeddings\n",
         "\n",
         "The paper which we're replicating states they used a combination of token and character-level embeddings.\n",
@@ -2585,7 +2586,7 @@
         "id": "6D10HNVluCc-",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 86
+          "height": 69
         },
         "outputId": "bcebc169-e514-4d16-89f7-be06796fbf13"
       },
@@ -3014,11 +3015,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G5wxDUpdAqYb",
-        "outputId": "2ecc9c8c-a1ee-47df-e5ce-49353f6ad018",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "G5wxDUpdAqYb",
+        "outputId": "2ecc9c8c-a1ee-47df-e5ce-49353f6ad018"
       },
       "source": [
         "# Get model 3 summary\n",
@@ -3057,11 +3058,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "99o4lPv0COwt",
-        "outputId": "3884bd8d-576e-44be-87b8-c964bb0b38aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "99o4lPv0COwt",
+        "outputId": "3884bd8d-576e-44be-87b8-c964bb0b38aa"
       },
       "source": [
         "# Create char level datasets\n",
@@ -3090,11 +3091,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r6iLx111Aubg",
-        "outputId": "0521420d-6ffc-4776-e5c6-9711b783c120",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r6iLx111Aubg",
+        "outputId": "0521420d-6ffc-4776-e5c6-9711b783c120"
       },
       "source": [
         "# Fit the model on chars only\n",
@@ -3123,11 +3124,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yTjPVUtNGGfz",
-        "outputId": "92f4c14c-5474-4241-870a-6a24ef11e9c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yTjPVUtNGGfz",
+        "outputId": "92f4c14c-5474-4241-870a-6a24ef11e9c5"
       },
       "source": [
         "# Evaluate the model 3\n",
@@ -3147,11 +3148,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3-BN0uV2Ghbh",
-        "outputId": "efa5dc97-ddd1-4b41-b9be-48dbbd6cdfb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3-BN0uV2Ghbh",
+        "outputId": "efa5dc97-ddd1-4b41-b9be-48dbbd6cdfb4"
       },
       "source": [
         "# Check model 3 prediction probabilities\n",
@@ -3184,11 +3185,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FBGoV3U8GpI9",
-        "outputId": "88b52fe4-2aac-4432-fe06-c25e26dc85ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FBGoV3U8GpI9",
+        "outputId": "88b52fe4-2aac-4432-fe06-c25e26dc85ec"
       },
       "source": [
         "# Turn prediction probabilites to class labels\n",
@@ -3214,11 +3215,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9P_G8TdlGxlq",
-        "outputId": "78304a6c-e1ce-475e-83a1-925c9b124a99",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9P_G8TdlGxlq",
+        "outputId": "78304a6c-e1ce-475e-83a1-925c9b124a99"
       },
       "source": [
         "# Calculate results for Conv1D model chars only\n",
@@ -3248,11 +3249,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tlLeERKRG-wG",
-        "outputId": "d3509f3d-5803-4d55-e85f-e626744a5df7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tlLeERKRG-wG",
+        "outputId": "d3509f3d-5803-4d55-e85f-e626744a5df7"
       },
       "source": [
         "baseline_results"
@@ -3277,9 +3278,24 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "zzvWCnc1HIJk"
+      },
+      "source": [
+        "## Model 4 : Combining pretrained token embeddings + character embeddings (hybrid embedding layer)\n",
+        "\n",
+        "1. Create a token-level embedding model (similar `model_1`)\n",
+        "2. Create a character-level model (similar to `model_3` with a slight modification)\n",
+        "3. Combine 1 & 2 with a concatenate(`layers.Concatenate`)\n",
+        "4. Build a seris of output layers on top of 3 similar to Figure 1 and section 4.2 of https://arxiv.org/pdf/1612.05251.pdf\n",
+        "5. Construct a model which takes token and character-level sequences as input and produces sequence label probabilities as output."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wkYzITlyINa-"
       },
       "source": [
         ""
