--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -3189,14 +3189,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FBGoV3U8GpI9",
-        "outputId": "88b52fe4-2aac-4432-fe06-c25e26dc85ec"
+        "outputId": "bd4cb881-713e-470e-e9e2-65657016ed03"
       },
       "source": [
         "# Turn prediction probabilites to class labels\n",
         "model_3_preds = tf.argmax(model_3_pred_probs, axis=1)\n",
         "model_3_preds"
       ],
-      "execution_count": 134,
+      "execution_count": 137,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3208,7 +3208,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 134
+          "execution_count": 137
         }
       ]
     },
@@ -3298,7 +3298,7 @@
         "id": "wkYzITlyINa-"
       },
       "source": [
-        ""
+        "# 1. Setup token inputs/model"
       ],
       "execution_count": null,
       "outputs": []
